<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/neighbourDetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whiteGrey"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/imageStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="276dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/ic_shape"
            android:contentDescription="star"
            android:elevation="8dp"
            android:onClick="addFavorite"
            app:backgroundTint="#FFFFFF"
            app:srcCompat="@drawable/ic_star_border_white_24dp"
            app:tint="#F9D211" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ScrollView>

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/textAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageAvatar"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="Name"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:onClick="buttonReturn"
            android:src="@drawable/ic_baseline_arrow_back_24" />


        <androidx.cardview.widget.CardView

        android:layout_below="@+id/imageAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteM"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

       <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:layout_marginStart="10dp"
        android:text="Name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal"/>

            <View
                android:id="@+id/neighbour_detail_line1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="1dp"
                android:background="#A9BCB9B9" />


            <TextView
        android:id="@+id/textAdress"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_gravity="fill_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_adress"
        android:drawablePadding="15dp"
        android:text="Adress"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="15dp"
        android:text="Phone"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_baseline_language_24"
        android:drawablePadding="15dp"
        android:text="Mail"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    </RelativeLayout>

        <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteM"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

           <TextView
            android:id="@+id/AboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="A propos de moi"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

            <View
                android:id="@+id/neighbour_detail_line2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="1dp"
                android:background="#A9BCB9B9" />


            <TextView

            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>



